0.3.3

0.3.2 - 2003-01-10

- Added feature: geoURL support, add app.geoCoordinates=x.x, y.y
- Fixed bug: Weblog dates use app.locale (e.g. app.locale=de, default is "en")
- Fixed bug: XML feeds (RSD, RSS) should no be legal UTF-8
- Developer: Refactored Snip to use interface and introduced interceptors (AOP)
- Fixed bug: RSD <api> was not closed
- Added feature: /raw/<snip-name> displays the raw content of a snip
- Added feature: uploading of images for a snip
- Added UNICODE (UTF-8 by default) support
- Added feature: importing snips from web frontend
- Fixed bug: referer corrected after multiple login tries
- Added feature: upgraded to RSD 1.0
- Added feature: link into a snip with [sniname#anchor]. Useful for pointing to sub postings
- Fixed bug: double encrypten when importing dump from 0.3a
- Added feature: support for SVG files
- Added feature: password reset by mailing a key
- Added feature: file-path macro displays a filepath
- Fixed bug: RSD <settings> was at the wrong place
- Fixed bug: detection of encrypted passwords on import

0.3.1 - 2002-12-11

- Fixed bug: run.bat classpath corrected
- Fixed bug: urls were double decoded (now only '+' is decoded by servlet)
- Fixed bug: some regexp consumed leading/following characters
- Added feature: Plugin architecture for source code formatters
- Added feature: Title for sub blogpost, added permalink to each sub blogpost
- Added feature: anchor Macro
- Fixed bug: Preview in comments
- Added feature: Preview in post blog
- Fixed some smaler bugs
- Refactored heavily the backend to use in-memory queries instead of SQL queries. This
  should allow us to move to Prevalyer easier

0.3 - 2002-11-21

- Added feature: Sky and Oranges themes
- Changed to newer versions of McKoi and ORO Regex
- Added feature: NullCodeFilter, {code:none} will now display the content
  without colorization, useful for e.g. pre formatted texts like shell examples
- We use RSS/XHTML/CSS buttons from http://www.antipixel.com and