@@ -1,5 +1,8 @@
 0.3.3
 
+- Added feature: Increase and decrease the shown month in the calendar view
+- Added feature: Calendar no displays correct day names with the correct locale
+
 0.3.2 - 2003-01-10
 
 - Added feature: geoURL support, add app.geoCoordinates=x.x, y.y
